[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostnexus"
version = "0.1.0"
description = "SDK Python officiel pour GhostNexus — GPU cloud décentralisé, sécurisé & RGPD"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GhostNexus", email = "contact@ghostnexus.net" }]
keywords = ["gpu", "cloud", "ai", "machine-learning", "decentralized", "compute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest", "responses", "black", "mypy"]

[project.urls]
Homepage = "https://ghostnexus.net"
Documentation = "https://ghostnexus.net/docs"
Repository = "https://github.com/ghostnexus/ghostnexus-python"
"Bug Tracker" = "https://github.com/ghostnexus/ghostnexus-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostnexus*"]
