[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostnexus"
version = "0.2.0"
description = "GhostNexus Python SDK — EU GPU cloud, GDPR-compliant"
readme = "README.md"
license = "MIT"
authors = [{ name = "GhostNexus", email = "contact@ghostnexus.net" }]
keywords = ["gpu", "cloud", "ai", "machine-learning", "gdpr", "eu", "compute", "pytorch", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
]
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.scripts]
ghostnexus = "ghostnexus.cli:main"

[project.optional-dependencies]
async = ["httpx>=0.27"]
dev = ["pytest", "responses", "black", "mypy", "httpx>=0.27"]

[project.urls]
Homepage = "https://ghostnexus.net"
Documentation = "https://ghostnexus.net/docs"
Repository = "https://github.com/Milaskinger/ghostnexus-python"
"Bug Tracker" = "https://github.com/Milaskinger/ghostnexus-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostnexus*"]
